# Helo

./: .gitignore  drizzle.config.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  subscription.md  tailwind.config.ts
docs/: ai-summary-workflow.md  architecture.md  authentication.md  database-schema.md  requirements.md  stripe.md
migrations/: 0000_true_dazzler.sql  0001_moaning_doomsday.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src/app/: error.tsx  layout.tsx  loading.tsx  middleware.ts  page.tsx  site.config.ts
src/app/[...route]/: articles.ts  bookmark.ts  route.ts
src/app/[[...route]]/: articles.ts  bookmark.ts
src/app/[id]/: page.tsx
src/app/actions/: auth.ts  user.ts
src/app/api/[[...route]]/: articles.ts  bookmark.ts  route.ts
src/app/articles/: page.tsx
src/app/auth/auth-code-error/: page.tsx
src/app/cancel/: page.tsx
src/app/config/: env.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/data/: book.json
src/app/guide/: page.tsx
src/app/latest/: page.tsx
src/app/lib/: hono.ts  honoTypes.ts
src/app/privacy/: page.tsx
src/app/search/: page.tsx
src/app/success/: page.tsx
src/app/terms/: page.tsx
src/app/types/: article.ts  bookmark.ts  common.ts  types.ts  user.ts
src/git/: __init__.py
src/github_mcp/: main.py
src/server/db/: client.ts  index.ts  migrate.ts  schema.ts
supabase/: config.toml
supabase/migrations/: 20250621074456_remote_schema.sql  20250621112525_enable-rls-and-policies.sql  20290101000000_update-schema-for-ai-features.sql
(+94 files in other folders)
