[project]
name = "github_mcp"
version = "0.1.0"
description = "GitHub MCP Server"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_mcp"]

[tool.uv.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9" 